--- a/kuma/views/formB.ejs
+++ b/kuma/views/formB.ejs
@@ -103,11 +103,11 @@
         <ul class="nav">
           <li class="nav-item">
             <a class="nav-link" href="/viewFormData">
-                <i class="fas fa-eye"></i> 
+                <i class="fas fa-eye"></i> /
            
             
        
-                <i class="fas fa-edit"></i> Edit
+                <i class="fas fa-edit"></i> 
             </a> <!-- Icon for editing -->
             
 
