--- a/kuma/views/viewFormData.ejs
+++ b/kuma/views/viewFormData.ejs
@@ -15,7 +15,8 @@
 
 
 
-<style>  .navbar {
+<style> 
+ .navbar {
     background-color: #922f11; /* Navbar background color */
     padding: 5px 10px; /* Adjust navbar padding */
 }
